# databricks-delta-lake-project

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  .vulturerc  COMPREHENSIVE-TODO.md  CONTRIBUTING.md  Dockerfile  INDEX.md  README.md  TRIAL-SETUP-GUIDE.md  docker-compose.yml  fix_all_formatting.py  fix_formatting.py  pylintrc  pyproject.toml  requirements-api.txt  requirements.txt  run_ci_checks.sh  validate_yaml.py
.github/workflows/: ci.yml  comprehensive-test.yml  trial-ci.yml
api/: __init__.py  main.py
config/environments/: dev.env.example
docs/: 00_README.md  01_ARCHITECTURE.md  02_QUICK_START.md  06_ML_GUIDE.md  07_DEVELOPMENT_GUIDE.md  08_CODE_QUALITY_STANDARDS.md  09_CI_CD_WORKFLOW.md  10_DEPLOYMENT_GUIDE.md  11_MONITORING.md  14_TROUBLESHOOTING.md  16_CHANGELOG.md  19_INDEX.md
documentation/: CHANGELOG.md  CI-CD-Pipeline-Diagram.txt  CI-CD-Pipeline.md  CI-CD-Quick-Reference.md  CI-CD-Workflow-Documentation.md  IMPROVEMENT-ROADMAP.md  INDEX.md  README.md
documentation/api/: api-documentation.md
documentation/developer-guides/: code-formatting-tools.md  code-quality-standards.md  development-workflow.md  type-checking-with-mypy.md
documentation/security/: data_classification_policy.md
infrastructure/kubernetes/: api-deployment.yaml  configmap.yaml  namespace.yaml  secret.yaml
infrastructure/terraform/: main.tf  trial.tf
operations/runbooks/: incident_response.md
scripts/: docker-build.sh  run_ci_checks.sh
scripts/data_processing/: __init__.py  bronze_layer.py  gold_layer.py  medallion_pipeline.py  silver_layer.py
src/api/: main.py
src/utils/: validate_yaml.py
src/utils/common/: config.py  exceptions.py  logging.py  validation.py
src/utils/egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
testing/integration/: test_databricks_integration.py
testing/performance/: __init__.py  test_performance.py
testing/unit/: __init__.py  test_bronze_layer_advanced.py  test_common_utils.py  test_config_advanced.py  test_databricks_connection.py  test_medallion_architecture.py  test_validation_advanced.py
utils/: __init__.py
utils/common/: __init__.py  config.py  exceptions.py  logging.py  validation.py
utils/databricks/: __init__.py  connection.py
